--- a/docs/usp570/bib_usp570.bib
+++ b/docs/usp570/bib_usp570.bib
@@ -72,6 +72,168 @@
   publisher={Elsevier}
 }
 
+@article{preston2007accessibility,
+  title={Accessibility, mobility and transport-related social exclusion},
+  author={Preston, John and Raj{\'e}, Fiona},
+  journal={Journal of transport geography},
+  volume={15},
+  number={3},
+  pages={151--160},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{lucas2012transport,
+  title={Transport and social exclusion: Where are we now?},
+  author={Lucas, Karen},
+  journal={Transport policy},
+  volume={20},
+  pages={105--113},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{act2015fixing,
+  title={Fixing America’s Surface Transportation Act},
+  author={Act, FAST},
+  booktitle={114th Congress of the United States of America, January},
+  volume={6},
+  year={2015}
+}
+
+@article{halden2011use,
+  title={The use and abuse of accessibility measures in UK passenger transport planning},
+  author={Halden, Derek},
+  journal={Research in Transportation Business \& Management},
+  volume={2},
+  pages={12--19},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{chen2008role,
+  title={Role of the built environment on mode choice decisions: additional evidence on the impact of density},
+  author={Chen, Cynthia and Gong, Hongmian and Paaswell, Robert},
+  journal={Transportation},
+  volume={35},
+  number={3},
+  pages={285--299},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{litman2013new,
+  title={The new transportation planning paradigm},
+  author={Litman, Todd},
+  journal={Institute of Transportation Engineers. ITE Journal},
+  volume={83},
+  number={6},
+  pages={20},
+  year={2013},
+  publisher={Institute of Transportation Engineers}
+}
+
+@article{owen2015modeling,
+  title={Modeling the commute mode share of transit using continuous accessibility to jobs},
+  author={Owen, Andrew and Levinson, David M},
+  journal={Transportation Research Part A: Policy and Practice},
+  volume={74},
+  pages={110--122},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{handy1997measuring,
+  title={Measuring accessibility: an exploration of issues and alternatives},
+  author={Handy, Susan L and Niemeier, Debbie A},
+  journal={Environment and planning A},
+  volume={29},
+  number={7},
+  pages={1175--1194},
+  year={1997},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{dodson2007investigating,
+  title={Investigating the social dimensions of transport disadvantage II: From concepts to methods through an empirical case study},
+  author={Dodson, Jago and Gleeson, Brendan and Evans, Rick and Sipe, Neil},
+  journal={Urban policy and research},
+  volume={25},
+  number={1},
+  pages={63--89},
+  year={2007},
+  publisher={TF}
+}
+
+@article{ben1979disaggregate,
+  title={Disaggregate travel and mobility choice models and measures of accessibility},
+  author={Ben-Akiva, Moshe},
+  journal={Behavioural travel modelling},
+  year={1979},
+  publisher={Croom Helm}
+}
+
+@article{geurs2004accessibility,
+  title={Accessibility evaluation of land-use and transport strategies: review and research directions},
+  author={Geurs, Karst T and Van Wee, Bert},
+  journal={Journal of Transport geography},
+  volume={12},
+  number={2},
+  pages={127--140},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{banister2008sustainable,
+  title={The sustainable mobility paradigm},
+  author={Banister, David},
+  journal={Transport policy},
+  volume={15},
+  number={2},
+  pages={73--80},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{koenig1980indicators,
+  title={Indicators of urban accessibility: theory and application},
+  author={Koenig, Jean-Gerard},
+  journal={Transportation},
+  volume={9},
+  number={2},
+  pages={145--172},
+  year={1980},
+  publisher={Springer}
+}
+
+@article{wachs1973physical,
+  title={Physical accessibility as a social indicator},
+  author={Wachs, Martin and Kumagai, T Gordon},
+  journal={Socio-Economic Planning Sciences},
+  volume={7},
+  number={5},
+  pages={437--456},
+  year={1973},
+  publisher={Elsevier}
+}
+
+@article{van2016accessible,
+  title={Accessible accessibility research challenges},
+  author={Van Wee, Bert},
+  journal={Journal of transport geography},
+  volume={51},
+  pages={9--16},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@online{EPA2019EJ,
+  author = {U.S.-Environmental-Protection-Agency},
+  title = {Environmental Justice},
+  url = {https://www.epa.gov/environmentaljustice},
+  urldate = {2019-05-1}
+}
+
 @article{bopp2015examining,
   title={Examining the link between public transit use and active commuting},
   author={Bopp, Melissa and Gayah, Vikash and Campbell, Matthew},
