--- a/static/usp570/pm_usp570_bak.tex
+++ b/static/usp570/pm_usp570_bak.tex
@@ -338,68 +338,71 @@ conditions and proposed policies It's a goal that almost everyone can
 agree on, and it opens doors to a host of strategies that could reduce
 auto dependence and improve quality of life.
 
-\begin{itemize}
-\tightlist
-\item
-  Accessibility versus Mobility
-\end{itemize}
+\hypertarget{distinguishing-accessibility-and-mobility}{%
+\section{distinguishing Accessibility and
+Mobility}\label{distinguishing-accessibility-and-mobility}}
 
-a clear distinction should be made between access to mobility, access to
-destinations (Levine et al., 2012) and universal accessibility.
-
-Mobility is concerned with how difficult it is to travel. accessibility
-how easier it is to reach destinations.
-
-In contrast, the concept of mobility is concerned only with how easy it
-is to get from one place to another. Mobility is only part of the
-picture.
+travel is a derived demand \emph{(Goldman and Gorham, 2006; Grengs et
+al., 2010; Halden, 2002; Handy and Niemeier, 1997; Levine et al.,
+2012)}. people travel to places where they can meet their daily needs,
+not simply to move about. the purpose of most travel is about the
+destination, not the journey.
 
 accessibility focuses on reaching destinations, the end goal of a
-transportation network, while mobility focuses on a single means of
-achieving this goal, travel speeds. Improvements in mobility alone are
-not sufficient to ensure improvements in accessibility.
-({\textbf{???}}\{proffitt2019accessibility)
+transportation network, focused on making it easier for individuals to
+reach destinations where they can meet daily needs such as work,
+recreation, socialising, shopping, and other forms of social exchange
+\emph{(Martens, 2015; Miller, 2005)}.
 
-Accessibility does not depend on good mobility.Some places such as San
-Francisco downtown have good accessibility despite having poor mobility
-(severe traffic congestion). The Residents live within a short distance
-of all needed and desired destinations. the travel times between
-destinations are relatively short, even if travel speeds are low.
+Mobility is concerned with how easy it is to travel. focuses on travel
+speeds. Improvements in mobility alone are not sufficient to ensure
+improvements in accessibility. (Proffitt et al. 2019)
 
-A place can also have good mobility but poor accessibility. Think of
-Manitoba in Canada. Some rural area has ample roads, low levels of
-congestion, and high speeds of travel, but relatively few destinations
-for shopping. Thus, good mobility is neither a sufficient nor a
-necessary condition for good accessibility.
+Planning for accessibility, Land use policies designed to bring
+destinations within walking distance of residential areas. may not even
+require retrofitting neighborhoods. For example, transit services that
+link specific groups of users to their desired destinations, such as
+reverse commute programs and other client-based transport services,
+Efforts like these reduce the need to drive,.25
+
+it facilitates the evaluation of tradeoffs between land use,
+transportation and social needs. By combining aspects of land use and
+transportation into a single measure, accessibility focuses attention on
+the performance of the system as a whole rather than on just segments of
+the transportation network.
+
+the clear distinction between mobility and accessibility indicators.
+Interestingly, accessibility and mobility are included as two distinct
+goals with different criteria and methodologies,
+
+Having shorter travel times does not necessarily equate to having access
+to a larger number of destinations. Furthermore, as discussed by Litman
+(2013), strategies aiming at increasing traffic speed may in some cases
+lead to an overall reduction in accessibility. In sum, increased
+mobility does not always result in increased accessibility (Halden,
+2011, Levine et al., 2012).
+
+`traditional transport planning, which tends to focus on improvements to
+the transport system that facilitate mobility, without considering the
+access needs that drive travel behaviour' (Chapman and Weir, 2008: 7).
+
+Accessibility is increasingly seen as an alternative to mobility
+oriented planning paradigm (Geurs et al., 2012), as it allows capturing
+the complex interactions between land use and transportation systems
+(Hansen, 1959) and provides a social perspective on transportation
+planning (Banister, 2008, Lucas, 2012). While mobility merely reflects
+the ease of moving, accessibility addresses the ease of reaching desired
+destinations, which is in fact the reason why people undertake trips
+(Preston and Rajé, 2007).
 
 Planning for mobility has taken on the meaning of making it easier to
 get around. This focus on the ease of traveling along the transport
 network itself (rather than focusing on the ease of reaching
-destinations) has aligned well with modern planning paradigms;
-
-road building has been the most popular solution to congestion. These
+destinations) has aligned well with modern planning paradigms; road
+building has been the most popular solution to congestion. These
 paradigms prize the planning-for-mobility perspective because it
 accommodates growing levels of travel and increases the potential for
 movement.
-
-In the suburban areas of Bay Area, transit service is relatively sparse
-and destinations are generally beyond walking distance, leaving
-residents with no option but to drive. the practice of planning is
-largely mobility-dependent, and car-dependent and has deteriorated
-levels of accessibility. As traffic levels invariably increase in these
-areas, accessibility ultimately declines for all modes.
-
-Planning for accessibility, in contrast, means making it easier for
-people to get where they want to go. Land use policies designed to bring
-destinations within walking distance of residential areas are one
-example of this paradigm. But planning for access may not even require
-retrofitting neighborhoods. For example, transit services that link
-specific groups of users to their desired destinations, such as reverse
-commute programs and other client-based transport services, are examples
-of planning for accessibility. Efforts like these reduce the need to
-drive, although they don't necessarily reduce actual driving.25
-
-({\textbf{???}}\{proffitt2019accessibility)
 
 conventional practice in transportation planning has employed a `predict
 and provide' model that focuses the majority of funding and planning
@@ -419,11 +422,6 @@ capacity, only rarely replacing existing highway travel lanes
 that facilitate longer and often more frequent trips is the mobility
 paradigm.
 
-Accessibility is focused on making it easier for individuals to reach
-destinations where they can meet daily needs such as work, recreation,
-socialising, shopping, and other forms of social exchange
-\emph{(Martens, 2015; Miller, 2005)}.
-
 improving mobility -- via automobile, transit, or any other travel mode
 -- means facilitating faster travel speeds so individuals can reach more
 destinations in a given travel time, improving proximity means
@@ -437,18 +435,70 @@ former allows for a comparison of the tradeoffs among financial,
 environmental and human health and wellbeing concerns when making
 decisions about land use and transportation.
 
-it facilitates the evaluation of tradeoffs between land use,
-transportation and social needs. By combining aspects of land use and
-transportation into a single measure, accessibility focuses attention on
-the performance of the system as a whole rather than on just segments of
-the transportation network.
+Accessibility does not depend on good mobility.Some places such as San
+Francisco downtown have good accessibility despite having poor mobility
+(severe traffic congestion). The Residents live within a short distance
+of all needed and desired destinations. the travel times between
+destinations are relatively short, even if travel speeds are low.
 
-the clear distinction between mobility and accessibility indicators. In
-the Baltimore plan, the multi-criteria analysis includes the following
-goals: safety, accessibility, mobility, environmental conservation,
-security and economic prosperity. Interestingly, accessibility and
-mobility are included as two distinct goals with different criteria and
-methodologies,
+In the suburban areas of Bay Area, transit service is relatively sparse
+and destinations are generally beyond walking distance, leaving
+residents with no option but to drive. the practice of planning is
+largely mobility-dependent, and car-dependent and has deteriorated
+levels of accessibility. As traffic levels invariably increase in these
+areas, accessibility ultimately declines for all modes.
+
+(Proffitt et al. 2019) increasingly tight budgets and a growing
+awareness that it simply is not possible for regions to pave their way
+out of congestion do seem to be pushing many MPOs to look for
+alternatives to expanding roadway capacity. Improving accessibility by
+coordinating land-use and transportation rather than an exclusive focus
+on automobility is one such alternative.
+
+\hypertarget{multi-criteria-analyses}{%
+\section{multi-criteria analyses}\label{multi-criteria-analyses}}
+
+accessibility indicators should systematically be included in
+multi-criteria analyses.
+
+it offers an alternative to mobility-based decisions and potentially
+provide greater transparency in the decision-making process (Halden,
+2011). Furthermore, national and regional authorities can require local
+authorities to address accessibility in their project analysis. One
+especially effective way of doing so is by including accessibility
+criteria in the selection process of projects,
+
+One of the most systematic and transparent way to inform decision-making
+is by including accessibility indicators into multi-criteria analyses. a
+multi-criteria analysis was conducted to compare the projects submitted
+by local jurisdictions and to select the ones to be included in the RTP.
+to conduct a prioritization of the projects to assess the effectiveness
+of various modelling scenarios.
+
+The accessibility indicators included in the multi-criteria analyses
+range from broad questions to specific quantified metrics, which
+influence the flexibility of the analysis. For example, Transport for
+London defines clear specific accessibility metrics, for example the
+change in the number of jobs accessible by public transport within 45
+minutes travel time (see Table 1). These access to jobs metrics are
+relatively easy to generate and to interpret. Accordingly, they foster
+the inclusion of accessibility indicators that adequately reflect the
+ease of reaching destinations. Furthermore, given their specific nature,
+they are easy to communicate as exemplified in the plan: ``Implementing
+the schemes will increase the employment catchment area of central
+London (the number of people within 45 minutes of central London
+employment) by almost 25 percent.'' (p.74).
+
+An intermediate way of defining accessibility indicators is by
+attributing scores (from 1 to 3 for example) based on specific
+guidelines. This approach has the advantage of defining clear weights
+associated with accessibility criteria, thus providing greater
+transparency.
+
+quantified metrics provide more specific guidelines that directly
+reflect the ease of reaching destinations. However, they provide lower
+flexibility and might not adequately reflect the outcomes of the
+different investments.
 
 \hypertarget{evaluates-the-accessibility-measures}{%
 \section{Evaluates the accessibility
@@ -870,34 +920,6 @@ EPA Walkability Index: Overview:
 Link to tool:
 \url{http://www.arcgis.com/home/webmap/viewer.html?url=https\%3A\%2F\%2Fgeodata.epa.gov\%2Farcgis\%2Frest\%2Fservices\%2FOA\%2FWalkabilityIndex\%2FMapServer\&source=sd}
 
-One of the most systematic and transparent way to inform decision-making
-is by including accessibility indicators into multi-criteria analyses,
-as done by the Baltimore Regional Transportation Board, the Puget Sound
-Regional Council, Transport for London and the Greater Manchester
-Combined Authority. For example, in Baltimore, a multi-criteria analysis
-was conducted to compare the projects submitted by local jurisdictions
-and to select the ones to be included in the Regional Transportation
-Plan (Maximize 2040). Similarly, the Puget Sound Regional Council
-included accessibility in their multi-criteria analysis used to conduct
-a prioritization of the projects. With respect to scenario assessments,
-Transport for London used a multi-criteria analysis including
-accessibility indicators to assess the effectiveness of various
-modelling scenarios.
-
-The accessibility indicators included in the multi-criteria analyses
-range from broad questions to specific quantified metrics, which
-influence the flexibility of the analysis. For example, Transport for
-London defines clear specific accessibility metrics, for example the
-change in the number of jobs accessible by public transport within 45
-minutes travel time (see Table 1). These access to jobs metrics are
-relatively easy to generate and to interpret. Accordingly, they foster
-the inclusion of accessibility indicators that adequately reflect the
-ease of reaching destinations. Furthermore, given their specific nature,
-they are easy to communicate as exemplified in the plan: ``Implementing
-the schemes will increase the employment catchment area of central
-London (the number of people within 45 minutes of central London
-employment) by almost 25 percent.'' (p.74).
-
 In contrast, accessibility criteria in the Greater Manchester plan are
 defined with broad questions such as ``Will the LTP help improve
 accessibility through integrated spatial planning?'' and ``Will the LTP
@@ -1080,9 +1102,14 @@ Levinson, David M, and Kevin J Krizek. 2018. \emph{Metropolitan Land Use
 and Transport: Planning for Place and Plexus}. Routledge.
 \url{https://doi.org/10.4324/9781315684482}.
 
+\leavevmode\hypertarget{ref-litman2013new}{}%
+Litman, Todd. 2013. ``The New Transportation Planning Paradigm.''
+\emph{Institute of Transportation Engineers. ITE Journal} 83 (6).
+Institute of Transportation Engineers: 20.
+
 \leavevmode\hypertarget{ref-litman2017evaluating}{}%
-Litman, Todd. 2017. \emph{Evaluating Accessibility for Transport
-Planning}. Victoria Transport Policy Institute.
+---------. 2017. \emph{Evaluating Accessibility for Transport Planning}.
+Victoria Transport Policy Institute.
 \url{http://www.vtpi.org/access.pdf}.
 
 \leavevmode\hypertarget{ref-lyons2016guidance}{}%
