--- a/static/usp570/rr_usp570.Rmd
+++ b/static/usp570/rr_usp570.Rmd
@@ -4,8 +4,8 @@ subtitle: "USP 570"
 author: 'Shen Qu'
 date: "Week 5"
 output:
-  pdf_document: default
   word_document: null
+  pdf_document: default
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -27,21 +27,20 @@ options(repos="https://cran.rstudio.com")
  
 @levinson2018metropolitan [Chapter.5] introduce some concepts about individual demand, modal competition, and network effects explain the mode choice decisions. The discipline of psychology defines travel behavior as habitual behavior which means “learned sequences of acts that have become automatic responses to specific cues, and are functional in obtaining certain goals or end-states.”
 
-travelers are generally being individually rational. They select automobile for transit's weakness in terms of door-to-door travel time.
-**Wardrop’s Principle of User Equilibrium**10 states that users are minimizing their own time rather than minimizing society’s overall travel time. **arms race** is another reason of consumer prefer SUVs than compact car, choosing car instead of bicycle in some case. The competition between users leads to overuse “common pool” resources that have limited supply and free access, bids up the cost for everyone. The competition between modes may result in socially sub-optimal results and lead to a vicious circle.
+Travelers are generally individually rational. They select the automobile for transit's weakness in terms of door-to-door travel time.
+**Wardrop’s Principle of User Equilibrium**10 states that users are minimizing their own time rather than reducing society’s overall travel time. **arms race** is another reason of consumer prefer SUVs than compact cars, choosing car instead of bicycle in some case. The competition between users leads to overuse “common pool” resources that have limited supply and free access, bids up the cost for everyone. The competition between modes may result in socially sub-optimal results and lead to a vicious circle.
  
-To avoid **Prisoner’s Dilemma**, a mechanism should let players consider their effects on others, care about the future payoffs, and play a Pareto efficient strategy. The investment and subsidies in transit show a collective rationality for lower total social travel costs by a high transit mode share.
-The **Mohring Effect**7 states that When bus frequency increases on a given route, users benefit from reduced waiting times, an increasing returns property of networks
-The positive feedback loop. 
+To avoid the **Prisoner’s Dilemma**, a mechanism should let players consider their effects on others, care about the future payoffs, and play a Pareto efficient strategy. The investment and subsidies in transit show collective rationality for lower total social travel costs by a high transit mode share.
+The **Mohring Effect** states that when bus frequency increases on a given route, users benefit from reduced waiting times. An increasing returns property of networks leads to a positive feedback loop. 
 
-Transit supply and demand have two stable states: One at high wait time yields zero ridership, which returns high wait time. Another at low wait time yields high rider ship, which returns low wait times. The interim states are not stable and need large subsidies to prop them up. 
+Transit supply and demand have two stable states: One at high wait time yields zero ridership, which returns high wait time. Another at low wait time produces high ridership, which returns low wait times. The interim states are not stable and need large subsidies to prop them up. 
 
  - Describing people's travel
 
-In Chapter.6, @levinson2018metropolitan describe and explain people's time spent in activities and transportation. The destination characteristics strongly influence trip characteristics. These discribtion only let us realize the complex of travel behaviors. It's still hard to understand and measure the whole prossess of trips. The analysts use several strategies to understand time spent in travel. Work versus non-work trips, simple versus complex tours, there are many dimensions of travel.
-The commom methods include calculate the distance, number of trips, and the mode of travel. Measures can be averaged at different levels from a single individual to a household, to transportation analysis zones, or even to entire metropolitan regions. Hagerstrand’s Space–Time Prism provides a powerful method for representing the relation among activities, individual trips, and total travel.
+In Chapter.6, @levinson2018metropolitan describe and explain people's time spent on activities and transportation. The destination characteristics strongly influence trip characteristics. These descriptions only let us realize the complexity of travel behaviors. It's still hard to understand and measure the whole process of trips. The analysts use several strategies to understand the time spent in travel. Work versus non-work trips, simple versus complex tours, there are many dimensions of travel.
+The common methods include calculating the distance, number of trips, and the mode of travel. Measures can be averaged at different levels from a single individual to a household, to transportation analysis zones, or even to entire metropolitan regions. Hagerstrand’s Space-Time Prism provides a powerful method for representing the relationships among activities, individual trips, and total travel.
 
-"Travel is a derived demand, and therefore we only do it when we want to get somewhere else or when necessary." In other word, how complex people's activities are determines how complex people's travels are. Hamilton suggests that people’s actual commutes were eight times longer than model-predicted values for shortest commutes. It is not strange that "even the most robust models that predict travel distance rarely explain more than 30 percent of the observed variation." The concoction of behaviors is difficult to predict.
+"Travel is a derived demand, and therefore we only do it when we want to get somewhere else or when necessary." In other words, how complex people's activities determine how complex people's travels are. Hamilton suggests that people’s actual commutes were eight times longer than model-predicted values for shortest commutes. It is not strange that "even the most robust models that predict travel distance just explain less than 30 percent of the observed variation." The concoction of behaviors is difficult to predict.
 
 
 References {#references .unnumbered}
