--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -554,7 +554,11 @@ $$\hat a=\frac{\sum_{i=1}^n(x_i-\bar x)^2}{n\bar x^2}=\frac{\hat\sigma^2}{\bar x
 
 The unrestricted MLEs are $\hat\theta=\bar x$ and $\hat a=\hat\sigma^2/\bar x^2$
 
-Under $a=a_0$, the restricted MLE of $\theta$ is
+Under $a=a_0$, 
+
+$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{\sum_{i=1}^n(x_i-\theta)^2}{\theta^3}+\frac{\sum_{i=1}^n(x_i-\theta)}{\theta^2}\overset{set}{=}0\implies-\theta^2+\sigma^2+(\bar x-\theta)^2+\theta(\bar x-\theta)=0$$
+
+The restricted MLE of $\theta$ is
 
 $$\hat\theta_R=\bar x+\frac1{2a_0}\sqrt{\bar x+4a_0(\hat\sigma^2+\bar x^2)}$$
 
