--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -426,9 +426,9 @@ $$k=1-\alpha^{1/n}=1-0.1^{1/n}=0.9, 0.68377, 0.53584,...,n=1,2,3...$$
 
 $f_X(x)=\frac{1}{\sqrt{2\pi\sigma_X^2}}e^{-x^2/2\sigma_X^2}$, $f_Y(y)=\frac{1}{\sqrt{2\pi\sigma_Y^2}}e^{-x^2/2\sigma_Y^2}$
 
-$$L(\sigma_X^2|x)=\prod_{i=1}^n(2\pi\sigma_X^2)^{-1/2}e^{-x_i^2/2\sigma_X^2}=(2\pi\sigma_X^2)^{-n/2}e^{-\sum_{i=1}^n{x_i^2/2\sigma_X^2}}$$
-$$l(\sigma_X^2|x)=-\frac{n}2\ln(2\pi\sigma_X^2)-\sum_{i=1}^n\frac{x_i^2}{2\sigma_X^2}$$
-$$l'(\sigma_X^2|x)=-\frac{n}{2\sigma_X^2}+\frac{\sum_{i=1}^nx_i^2}{2\sigma_X^4}\overset{set}{=}0$$
+$L(\sigma_X^2|x)=\prod_{i=1}^n(2\pi\sigma_X^2)^{-1/2}e^{-x_i^2/2\sigma_X^2}=(2\pi\sigma_X^2)^{-n/2}e^{-\sum_{i=1}^n{x_i^2/2\sigma_X^2}}$
+$l(\sigma_X^2|x)=-\frac{n}2\ln(2\pi\sigma_X^2)-\sum_{i=1}^n\frac{x_i^2}{2\sigma_X^2}$
+$l'(\sigma_X^2|x)=-\frac{n}{2\sigma_X^2}+\frac{\sum_{i=1}^nx_i^2}{2\sigma_X^4}\overset{set}{=}0$
 $$\hat\sigma_{X-MLE}^2=\frac{\sum_{i=1}^nx_i^2}{n}$$
 
 By the same way, the unrestricted MLEs
@@ -437,20 +437,19 @@ $$\hat\sigma_{Y-MLE}^2=\frac{\sum_{i=1}^my_i^2}{m}$$
 
 Under $H0:\lambda=\lambda_0$, $\lambda_0=\sigma^2_Y/\sigma^2_X$, $\sigma^2_Y=\lambda_0\sigma^2_X$
 
+$L(\sigma^2_X,\sigma^2_Y|x,y)=L(\sigma^2_X,\lambda_0\sigma^2_X|x,y)=(2\pi\sigma_X^2)^{-\frac{n}2}e^{{\frac{-\sum_{i=1}^nx_i^2}{2\sigma_X^2}}}(2\pi\lambda_0\sigma^2_X)^{-\frac{m}2}e^{{\frac{-\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}}}=(2\pi\sigma_X^2)^{-(m+n)/2}\lambda_0^{-m/2}e^{\frac{-\lambda_0\sum_{i=1}^nx_i^2-\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}}$
 
-$$L(\sigma^2_X,\sigma^2_Y|x,y)=L(\sigma^2_X,\lambda_0\sigma^2_X|x,y)=(2\pi\sigma_X^2)^{-\frac{n}2}e^{{\frac{-\sum_{i=1}^nx_i^2}{2\sigma_X^2}}}(2\pi\lambda_0\sigma^2_X)^{-\frac{m}2}e^{{\frac{-\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}}}=(2\pi\sigma_X^2)^{-(m+n)/2}\lambda_0^{-m/2}e^{\frac{-\lambda_0\sum_{i=1}^nx_i^2-\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}}$$
-$$l(\sigma^2_X,\sigma^2_Y|x,y)=-\frac{m+n}2\ln(2\pi\sigma_X^2)-\frac{m}2\ln\lambda_0-\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}$$
+$l(\sigma^2_X,\sigma^2_Y|x,y)=-\frac{m+n}2\ln(2\pi\sigma_X^2)-\frac{m}2\ln\lambda_0-\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{2\lambda_0\sigma^2_X}$
 
 Differentiating the log likelihood
 
-$$\frac{\partial}{\partial\sigma^2_X}l(\sigma^2_X,\sigma^2_Y|x,y)=-\frac{m+n}{2\sigma_X^2}+\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{2\lambda_0\sigma^4_X}\overset{set}{=}0$$
+$\frac{\partial}{\partial\sigma^2_X}l(\sigma^2_X,\sigma^2_Y|x,y)=-\frac{m+n}{2\sigma_X^2}+\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{2\lambda_0\sigma^4_X}\overset{set}{=}0$
+
 $$\hat\sigma^2_{0}=\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{\lambda_0(m+n)}$$
 
-$$\frac{\partial}{\partial\sigma^2_X}l(\sigma^2_X,\sigma^2_Y|x,y)=-\frac{m+n}{2\sigma_X^2}+\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{2\lambda_0\sigma^4_X}\overset{set}{=}0$$
+The second derivative
 
-To see this is a maximum, check the second derivative
-
-$$\frac{\partial^2}{\partial(\sigma^2_X)^2}l(\sigma^2_X,\sigma^2_Y|x,y)=\frac{m+n}{2\sigma_X^4}-\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{\lambda_0(\sigma^2_X)^3}$$
+$\frac{\partial^2}{\partial(\sigma^2_X)^2}l(\sigma^2_X,\sigma^2_Y|x,y)=\frac{m+n}{2\sigma_X^4}-\frac{\lambda_0\sum_{i=1}^nx_i^2+\sum_{i=1}^my_i^2}{\lambda_0(\sigma^2_X)^3}$
 
 When $\sigma^2_X=\hat\sigma^2_{0}$,
 
@@ -506,16 +505,18 @@ Hence, the function is an upside-down bowl, and the set $\left\{\lambda:\frac{(m
 
 $f_X(x)=\frac{1}{\sqrt{2\pi a\theta}}e^{-x^2/2a\theta}$, 
 
-$$L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta)^{-1/2}e^{-(x_i-\theta)^2/2a\theta}=(2\pi a\theta)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta}}$$
-$$l(a,\theta|x)=-\frac{n}2\ln(2\pi a\theta)-\sum_{i=1}^n\frac{(x_i-\theta)^2}{2a\theta}$$
+$L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta)^{-1/2}e^{-(x_i-\theta)^2/2a\theta}=(2\pi a\theta)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta}}$
 
-$$\frac{\partial}{\partial a}l(a,\theta|x)=-\frac{n}{2a}+\frac{1}{2\theta a^2}\sum_{i=1}^n(x_i-\theta)^2\overset{set}{=}0$$
+$l(a,\theta|x)=-\frac{n}2\ln(2\pi a\theta)-\sum_{i=1}^n\frac{(x_i-\theta)^2}{2a\theta}$
 
-$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{2\theta}+\frac{1}{2a\theta^2}\sum_{i=1}^n(x_i-\theta)^2+\frac{1}{a\theta}\sum_{i=1}^n(x_i-\theta)=-\frac{n}{2\theta}+\frac{1}{2a\theta^2}\sum_{i=1}^n(x_i-\theta)^2+\frac{n\bar x-n\theta}{a\theta}$$
+$\frac{\partial}{\partial a}l(a,\theta|x)=-\frac{n}{2a}+\frac{1}{2\theta a^2}\sum_{i=1}^n(x_i-\theta)^2\overset{set}{=}0$
 
-$$a=\frac{\sum_{i=1}^n(x_i-\theta)^2}{n\theta}$$
+$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{2\theta}+\frac{1}{2a\theta^2}\sum_{i=1}^n(x_i-\theta)^2+\frac{1}{a\theta}\sum_{i=1}^n(x_i-\theta)=-\frac{n}{2\theta}+\frac{1}{2a\theta^2}\sum_{i=1}^n(x_i-\theta)^2+\frac{n\bar x-n\theta}{a\theta}$
 
-$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{2\theta}+\frac{n}{2a\theta}+\frac{n\bar x-n\theta}{a\theta}\overset{set}{=}0\implies\hat\theta=\bar x$$
+$a=\frac{\sum_{i=1}^n(x_i-\theta)^2}{n\theta}$
+
+$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{2\theta}+\frac{n}{2a\theta}+\frac{n\bar x-n\theta}{a\theta}\overset{set}{=}0\implies\hat\theta=\bar x$
+
 Thus
 
 $$\hat a=\frac{\sum_{i=1}^n(x_i-\bar x)^2}{n\bar x}=\frac{\hat\sigma^2}{\bar x}$$
@@ -524,7 +525,7 @@ $\hat\theta=\bar x$ and $\hat a=\hat\sigma^2/\bar x$ are the unrestricted MLEs.
 
 Under $a=a_0$, the restricted MLE of $\theta$ is
 
-$$\hat\theta_0=-\frac12a_0+\frac12\sqrt{a_0^2+4\sum_{i=1}^nx_i^2/n}$$
+$\hat\theta_0=-\frac12a_0+\frac12\sqrt{a_0^2+4\sum_{i=1}^nx_i^2/n}$
 
 The LRT statistic is
 
@@ -538,16 +539,18 @@ The rejection region of a size $\alpha$ test is $\{x:\lambda(x)\le c_{\alpha}\}$
 
 $f_X(x)=\frac{1}{\sqrt{2\pi a\theta^2}}e^{-x^2/2a\theta^2}$, 
 
-$$L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta^2)^{-1/2}e^{-(x_i-\theta)^2/2a\theta^2}=(2\pi a\theta^2)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta^2}}$$
-$$l(a,\theta|x)=-\frac{n}2\ln(2\pi a\theta^2)-\sum_{i=1}^n\frac{(x_i-\theta)^2}{2a\theta^2}$$
+$L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta^2)^{-1/2}e^{-(x_i-\theta)^2/2a\theta^2}=(2\pi a\theta^2)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta^2}}$
 
-$$\frac{\partial}{\partial a}l(a,\theta|x)=-\frac{n}{2a}+\frac{1}{2a^2\theta^2 }\sum_{i=1}^n(x_i-\theta)^2\overset{set}{=}0$$
+$l(a,\theta|x)=-\frac{n}2\ln(2\pi a\theta^2)-\sum_{i=1}^n\frac{(x_i-\theta)^2}{2a\theta^2}$
 
-$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{1}{a\theta^3}\sum_{i=1}^n(x_i-\theta)^2+\frac{1}{a\theta^2}\sum_{i=1}^n(x_i-\theta)$$
+$\frac{\partial}{\partial a}l(a,\theta|x)=-\frac{n}{2a}+\frac{1}{2a^2\theta^2 }\sum_{i=1}^n(x_i-\theta)^2\overset{set}{=}0$
 
-$$a=\frac{\sum_{i=1}^n(x_i-\theta)^2}{n\theta^2}$$
+$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{1}{a\theta^3}\sum_{i=1}^n(x_i-\theta)^2+\frac{1}{a\theta^2}\sum_{i=1}^n(x_i-\theta)$
 
-$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{n}{\theta}+\frac{n\sum_{i=1}^n(x_i-\theta)}{\sum_{i=1}^n(x_i-\theta)^2}\overset{set}{=}0\implies\hat\theta=\bar x$$
+$a=\frac{\sum_{i=1}^n(x_i-\theta)^2}{n\theta^2}$
+
+$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{n}{\theta}+\frac{n\sum_{i=1}^n(x_i-\theta)}{\sum_{i=1}^n(x_i-\theta)^2}\overset{set}{=}0\implies\hat\theta=\bar x$
+
 Thus
 
 $$\hat a=\frac{\sum_{i=1}^n(x_i-\bar x)^2}{n\bar x^2}=\frac{\hat\sigma^2}{\bar x^2}$$
@@ -556,7 +559,7 @@ The unrestricted MLEs are $\hat\theta=\bar x$ and $\hat a=\hat\sigma^2/\bar x^2$
 
 Under $a=a_0$, 
 
-$$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{\sum_{i=1}^n(x_i-\theta)^2}{\theta^3}+\frac{\sum_{i=1}^n(x_i-\theta)}{\theta^2}\overset{set}{=}0\implies-\theta^2+\sigma^2+(\bar x-\theta)^2+\theta(\bar x-\theta)=0$$
+$\frac{\partial}{\partial\theta}l(a,\theta|x)=-\frac{n}{\theta}+\frac{\sum_{i=1}^n(x_i-\theta)^2}{\theta^3}+\frac{\sum_{i=1}^n(x_i-\theta)}{\theta^2}\overset{set}{=}0\implies-\theta^2+\sigma^2+(\bar x-\theta)^2+\theta(\bar x-\theta)=0$
 
 The restricted MLE of $\theta$ is
 
